fix: codesnippet not fitting screen when code is too long

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -425,6 +425,7 @@ pre code {
 }
 .code-toolbar{
    font-size: 11px;
+   max-width: 95%;
 }
 
 .footer{
